assets/containers: correct the fixe for image overlap

--- a/euth_wagtail/assets/scss/core/_containers.scss
+++ b/euth_wagtail/assets/scss/core/_containers.scss
@@ -34,7 +34,7 @@ img {
     height: auto !important;
 }
 
-p {
+.tab-panel p {
     @include clearfix; // stops overlap of img added via ckeditor and floated
 }
 
